--- a/social/feedApp/templates/message_details.html
+++ b/social/feedApp/templates/message_details.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+{% block title %}
+{{ object.body }}
+{% endblock %}
+
 {% block content %}
 {% if user.is_authenticated %}
 <h1>
